--- a/style.css
+++ b/style.css
@@ -28,13 +28,18 @@ border-color: white;
     text-decoration: none;
     color: rgb(255, 230, 0) ;
 }
-.btn a:hover{
+.btn .b1:hover{
     background-color: rgb(255, 230, 0);
 color: rgb(2, 2, 188);
 transition: 0.5s ease;
 }
 .btn:hover{
 background-color: white;
+color: rgb(2, 2, 188);
+transition: 0.5s ease;
+}
+.btn .b2:hover{
+    background-color: rgb(255, 255, 255);
 color: rgb(2, 2, 188);
 transition: 0.5s ease;
 }
